# python-bigquery-dataframes

./: .coverage.drespana.c.googlers.com.3550748.XXvfFDJx  .coverage.drespana.c.googlers.com.3550751.XwItSFox  .coverage.drespana.c.googlers.com.3550754.XcpFEUxx  .coverage.drespana.c.googlers.com.3550757.XLojqoax  .coverage.drespana.c.googlers.com.3550783.XvEGHqdx  .coverage.drespana.c.googlers.com.3550809.XPJZxsqx  .coverage.drespana.c.googlers.com.3550839.XXCARIgx  .coverage.drespana.c.googlers.com.3550898.XPsfeaQx  .coverage.drespana.c.googlers.com.3550926.XgKKmumx  .coverage.drespana.c.googlers.com.3550953.XnaaPfFx  .coverage.drespana.c.googlers.com.3550980.XXXpBWIx  .coverage.drespana.c.googlers.com.3551008.XDCasXQx  .coverage.drespana.c.googlers.com.3551041.XEThGvYx  .coverage.drespana.c.googlers.com.3551068.XSNgUHix  .coverage.drespana.c.googlers.com.3551073.XMUdzuvx  .coverage.drespana.c.googlers.com.3551136.XOBCnknx  .coverage.drespana.c.googlers.com.3551163.XKxovyix  .coverage.drespana.c.googlers.com.3551167.XMnSMyCx  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  =3.4.0  CHANGELOG.md  CONTRIBUTING.rst  Copy_of_semantic_operators.ipynb  GEMINI.md  LICENSE  MANIFEST.in  OWNERS  README.rst  THIRD_PARTY_NOTICES  conftest.py  debug.ipynb  debugcrs.ipynb  demo.ipynb  dummy.pkl  env.sh  (+16 more)
.github/: .OwlBot.lock.yaml  CODEOWNERS  header-checker-lint.yml  release-please.yml  sync-repo-settings.yaml
.kokoro/: build.sh  publish-docs.sh  release-nightly.sh  requirements.in  requirements.txt
.librarian/: state.yaml
bigframes/: core.py  (+30 more)
(+4669 files in other folders)
